Added commands for most ghost game settings refactored ghost command to smaller classes. I really don't know if that helped, since it's now spaghetti instead of a big meat ball... Redid how configs call back to their modules to make future expansion of this system more robust.